# re4-android

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  re4.cpp
app/src/main/java/: CreateEventActivity.kt  MainActivity.kt
app/src/main/java/day/: DayFragment.kt
app/src/main/java/month/: MonthFragment.kt  MonthViewModel.kt
app/src/main/java/timeline/: TimelineDataSource.kt  TimelineDateAdapter.kt  TimelineDateViewHolder.kt  TimelineFragment.kt  TimelineViewModel.kt
app/src/main/res/layout/: create_event_activity.xml  day_fragment.xml  main_activity.xml  month_fragment.xml  timeline_date_view.xml  timeline_fragment.xml
app/src/main/res/menu/: timeline.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml
